--- a/Week02/babelDemo/package.json
+++ b/Week02/babelDemo/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5"
+    "@babel/core": "^7.10.5",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
