--- a/Week03/JestDemo/todo-tdd/package.json
+++ b/Week03/JestDemo/todo-tdd/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.26"
   },
   "devDependencies": {
     "jest": "^26.2.2"
