--- a/Week03/JestDemo/todo-tdd/package.json
+++ b/Week03/JestDemo/todo-tdd/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.9.26"
+    "mongoose": "^5.9.26",
+    "node-mocks-http": "^1.8.1",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "jest": "^26.2.2"
