--- a/Week04/HighchartsApp/package.json
+++ b/Week04/HighchartsApp/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "angular-highcharts": "^9.0.11",
     "highcharts": "^8.1.2",
     "highcharts-angular": "^2.7.0",
     "rxjs": "~6.5.4",
