--- a/Week04/GulpDemo/package.json
+++ b/Week04/GulpDemo/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "babelify": "^10.0.0",
+    "browserify": "^16.5.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-sass": "^4.1.0",
@@ -16,6 +20,11 @@
   },
   "dependencies": {
     "gulp-rename": "^2.0.0"
+  },
+  "babel": {
+    "preset": [
+      "env"
+    ]
   },
   "browserslist": [
     "last 2 versions",
