--- a/Week04/GRUNT_JULY/package.json
+++ b/Week04/GRUNT_JULY/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gulp_1",
+  "name": "GRUNT_JULY",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,11 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-jshint": "^2.1.0",
-    "gulp-jshint-html-reporter": "^0.1.4",
-    "gulp-rename": "^2.0.0",
-    "jshint": "^2.12.0"
+    "grunt": "^1.2.1"
   }
 }
