--- a/Week04/GRUNT_JULY/package.json
+++ b/Week04/GRUNT_JULY/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "^1.2.1"
+    "grunt": "^1.2.1",
+    "grunt-contrib-concat": "^1.0.1"
   }
 }
