--- a/Week04/GRUNT_JULY/package.json
+++ b/Week04/GRUNT_JULY/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "grunt": "^1.2.1",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-uglify": "^5.0.0",
     "grunt-sass": "^3.1.0",
     "node-sass": "^4.14.1"
