--- a/Week04/GRUNT_JULY/package.json
+++ b/Week04/GRUNT_JULY/package.json
@@ -13,6 +13,7 @@
     "grunt": "^1.2.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-uglify": "^5.0.0",
     "grunt-sass": "^3.1.0",
     "node-sass": "^4.14.1"
