--- a/Week03/demo/package.json
+++ b/Week03/demo/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongojs": "^3.1.0"
+    "mongojs": "^3.1.0",
+    "rxjs": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
